--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <a href="html/propertiesFilter.html"><button>26 -  Filtrando propriedades</button></a>
             <a href="html/joiningObjects.html"><button>27 -  União de objetos</button></a>
             <a href="html/changeColor.html"><button>28 -  Alterando CSS</button></a>
+            <a href="html/changeClass.html"><button>29 -  Alternar classes</button></a>
         </div>
     </div>
 
