--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <a href="html/joiningObjects.html"><button>27 -  União de objetos</button></a>
             <a href="html/changeColor.html"><button>28 -  Alterando CSS</button></a>
             <a href="html/changeClass.html"><button>29 -  Alternar classes</button></a>
+            <a href="html/addingElements.html"><button>30 -  Adicionando e Removendo Elementos</button></a>
+            <a href="html/filter.html"><button>31 -  Filtro por palavra</button></a>
+            <a href="html/moveItens.html"><button>32 -  Mover elementos</button></a>
         </div>
     </div>
 
