--- a/html/moveItens.html
+++ b/html/moveItens.html
@@ -12,19 +12,20 @@
     <div class="main_div">
         <a href="../index.html"><button class="home_button">HOME</button></a>
         <ul class="text" id="list">
-            <li id="p1">Gato</li>
-            <li id="p2">Cachorro</li>
-            <li id="p3">Rato</li>
-            <li id="p4">Cavalo</li>
-            <li id="p5">Coelho</li>
+            <li id="p0">Gato</li>
+            <li id="p1">Cachorro</li>
+            <li id="p2">Rato</li>
+            <li id="p3">Cavalo</li>
+            <li id="p4">Coelho</li>
         </ul>
         <h1 class="text" >Digite o elemento que deseja filtrar</h1>
         <form action="#">
             <input class="main_input" type="text" id="filter" required>
         </form>
-        <button class="button" onclick="moveItens(this.id)" id="select">Selecionar</button>
+        <button class="button" onclick="moveItens(this.id)" id="select">SELECIONAR</button>
         <button class="button" onclick="moveItens(this.id)" id="up">SUBIR</button>
         <button class="button" onclick="moveItens(this.id)" id="down">DESCER</button>
+        <button class="button" onclick="moveItens(this.id)" id="deselect">DESELECIONAR</button>
     </div>
 </body>
 </html>
